added my cv link and need to still fix project links as not fully working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Barlow&family=PT+Serif&display=swap"
       rel="stylesheet"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+      </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -135,7 +138,7 @@
         
         <div class="wrapper">
            <div class="new-card">  
-            <a href="" target="-blank">
+            <a href="https://roxywasiak.github.io/password-generator/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/passwordgen.png"
               alt="image of padlock for password generator"
@@ -150,7 +153,7 @@
         <!-- project 4  code quiz -->
         <div class="wrapper">
            <div class="new-card"> 
-            <a href="" target="-blank">
+            <a href="https://roxywasiak.github.io/code-quiz/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/quizstart.png"
               alt="image of icons showing quiz like scenario"
@@ -167,7 +170,7 @@
         <div class="wrapper">
           <!-- could potentially get rid of this div and place flex items into href class -->
            <div class="new-card"> 
-            <a href="" target="-blank">
+            <a href="https://roxywasiak.github.io/work-day-scheduler/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/workdaysched.png"
               alt="image of a diary with planning"
@@ -201,7 +204,7 @@
         <!-- project 7 group project 1-->
         <div class="wrapper">
            <div class="new-card"> 
-            <a href="" target="-blank">
+            <a href="https://talexandru1987.github.io/group-4-project-1/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/homepage.png"
               alt="image of people in a group working on a project"
@@ -240,6 +243,12 @@
               <i class="fa-solid fa-envelope fa-2x"></i>
             </a>
           </div>
+          <div class="icon">
+            <a href="./assets/images/Rukhsana Wasiak CV22.pdf"  target="-blank" download>
+               <i class="fa-solid fa-file fa-2x"></i>
+             </a>
+           </div>
+           
        </section>
       <!-- end of the sections all -->
     </main>
