added the correct links and just need to redo screenshot for porfolio to go onto portfolio image

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
         <!-- project 6 weather dashboard-->
         <div class="wrapper">
           <div class="new-card"> 
-            <a href="" target="-blank">
+            <a href="https://roxywasiak.github.io/weather-dashboard/" target="-blank">
             <img
-              src="./assets/images/weatherdash.jpeg"
+              src="./assets/images/screenshotsnew/startweather.png"
               alt="weather dashboard image"
              ></a>
           </div>
@@ -199,7 +199,7 @@
             <p>
               A weather dashboard for a summary of weather
             </p>
-            <a href="" target="blank">Click for code</a>
+            <a href="https://github.com/roxywasiak/weather-dashboard/tree/dev" target="blank">Click for code</a>
           </div>
         </div>
 
@@ -218,7 +218,7 @@
             <p>
               A group project showcasing various technologies
             </p>
-            <a href="https://github.com/roxywasiak/work-day-scheduler/tree/dev" target="blank">Click for code</a>
+            <a href="https://github.com/talexandru1987/group-4-project-1" target="blank">Click for code</a>
           </div>
         </div>
       
