added the readme and updated the alt tages and projects

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <a href="https://roxywasiak.github.io/password-generator/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/passwordgen.png"
-              alt="image of padlock for password generator"
+              alt="image of a password generator"
             /></a>
           </div>
           <div class="project-h">
@@ -155,7 +155,7 @@
             <a href="https://roxywasiak.github.io/code-quiz/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/quizstart.png"
-              alt="image of icons showing quiz like scenario"
+              alt="image of a code quiz"
            ></a>
           </div>
 
@@ -173,7 +173,7 @@
             <a href="https://roxywasiak.github.io/work-day-scheduler/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/workdaysched.png"
-              alt="image of a diary with planning"
+              alt="image of a day planner"
              ></a>
           </div>
 
@@ -209,7 +209,7 @@
             <a href="https://talexandru1987.github.io/group-4-project-1/" target="-blank">
             <img
               src="./assets/images/screenshotsnew/homepage.png"
-              alt="image of people in a group working on a project"
+              alt="image ofa movie application"
            ></a>
           </div>
 
