added smaller image for portfolio

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
            <div class="new-card"> 
             <a href=" https://roxywasiak.github.io/personal-portfolio-project/" target="-blank" >
             <img
-              src="./assets/images/portfolio.jpeg"
+              src="./assets/images/screenshotsnew/smallerportfolio.png"
               alt="image of portfolio of projects"
             /></a>
           </div>
