added my new cv

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </a>
           </div>
           <div class="icon">
-            <a href="./assets/images/Rukhsana Wasiak CV22.pdf"  target="-blank" download>
+            <a href="./assets/images/rukhsana.pdf"  target="-blank" download>
                <i class="fa-solid fa-file fa-2x"></i>
              </a>
            </div>
