--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="firstProject">
           <h3>Buddy-Up</h3>
           <p>
-           A full stack web application where a user can search for a buddy or tutor for study support in various subjects. The user can create a profile, advert. They can be matched to a suitable Buddy /Tutor.
+           A full stack web application where a user can search for a buddy or tutor for study support in various subjects. The user can create a profile and advert. They can be matched to a suitable Buddy or Tutor who will respond to their advert and be matched up via a session. Messaging is available in order for the pair to communicate.
           <a href="https://github.com/roxywasiak/marketing-agency-website/tree/dev" target="blank">Click for code</a></p>
         </div>
       
